--- a/package.json
+++ b/package.json
@@ -3,16 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@monaco-editor/react": "3.7.5",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.14",
+    "@types/prettier": "^2.4.2",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "7.1.15",
+    "@types/react-resizable": "1.7.2",
+    "@uiw/react-md-editor": "2.1.1",
+    "axios": "0.21.1",
+    "bulmaswatch": "^0.8.1",
+    "esbuild-wasm": "0.8.27",
+    "immer": "^9.0.7",
+    "localforage": "^1.10.0",
+    "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "7.2.2",
+    "react-resizable": "1.11.0",
     "react-scripts": "5.0.0",
+    "redux": "4.0.5",
+    "redux-thunk": "2.3.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
